[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/drop1.png" type="Texture" id=1]
[ext_resource path="res://drops/base_drop.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 29.6009

[node name="Drop" type="Area2D"]
linear_damp = 0.0
collision_layer = 32
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Drop_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
